[tool.poetry]
name = "robodog"
version = "0.1.0"
description = ""
authors = ["Jerome <o.jerome@innopolis.university>"]
readme = "README.md"
packages = [{ include = "robodog" }]

[tool.poetry.dependencies]
python = "^3.10"
mujoco = "^3.0.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
